[workspace]
[package]
name = "rocky"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "rocky"
default = true
path = "src/rocky.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librocksdb-sys = {version="0.11.0+8.1.1", default-features = false, features = ["lz4"]}
